Fix color adjustment confusion
SCSS functions apply absolute change to the color lightness values, but
the 'color' npm package does relative changes. This lead to inconsistent
behavior between the default and custom accent colors.

See also https://github.com/Qix-/color/issues/53#issuecomment-656590710

We use relative adjustment for buttons. For the service switcher in
light mode, we use relative adjustment instead, because absolute
adjustment made the buttons too hard to see (#235).

--- a/src/styles/tabs.scss
+++ b/src/styles/tabs.scss
@@ -33,7 +33,8 @@
   width: $theme-sidebar-width;
 
   &.is-active {
-    background: lighten($theme-brand-primary, 35%);
+    background: change-color($theme-brand-primary,
+                             $lightness: min(lightness($theme-brand-primary) * 1.35, 100));
     border-left-width: 4px;
     border-left-style: solid;
     color: $theme-brand-primary;
